RESOLVED FIXED266007
[Site Isolation] Fix more cases where we unnecessarily skip code on out-of-process frames
https://bugs.webkit.org/show_bug.cgi?id=266007
Summary [Site Isolation] Fix more cases where we unnecessarily skip code on out-of-pr...
Charlie Wolfe
Reported 2023-12-07 11:02:18 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-07 11:02:32 PST
Charlie Wolfe
Comment 2 2023-12-07 11:14:05 PST
EWS
Comment 3 2023-12-08 04:09:40 PST
Committed 271723@main (008862a638f5): <https://commits.webkit.org/271723@main> Reviewed commits have been landed. Closing PR #21452 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.