[Site Isolation] Fix more cases where we unnecessarily skip code on out-of-process frames https://bugs.webkit.org/show_bug.cgi?id=266007 rdar://119326844

Reviewed by Pascoe.

* Source/WebCore/page/Frame.cpp:
(WebCore::Frame::arePluginsEnabled):
* Source/WebCore/page/Frame.h:
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::arePluginsEnabled): Deleted.
* Source/WebCore/page/LocalFrame.h:
* Source/WebCore/page/PageOverlay.cpp:
(WebCore::PageOverlay::viewToOverlayOffset const):
(WebCore::PageOverlay::mouseEvent):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::resolveChildFrameWithNodeHandle):
* Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageCopyContextMenuAtPointInWindow):
* Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.cpp:
(WebKit::WebFoundTextRangeController::rectsForTextMatchesInRect):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setAlwaysShowsHorizontalScroller):
(WebKit::WebPage::setAlwaysShowsVerticalScroller):
(WebKit::WebPage::canShowMIMEType const):

Canonical link: https://commits.webkit.org/271723@main